feat: release v2.1.1 (#316)
* fix: zgc not work on win7